recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:4: error: identifier expected but ')' found.
  	carre(100.);
                  ^FourSquare:5: error: identifier expected but ')' found.
  	droite(90.);
                  ^FourSquare:7: error: identifier expected but ')' found.
  droite(90.);
            ^FourSquare:13: error: identifier expected but ')' found.
  	droite(90.);
                  ^