recursion.logo.lessons.recursion.logo.square.FourSquare.scala.code

override def run() {
  for (cpt <- 0 to 3) {
  	carre(100.);
  	droite(90.);
  }
  droite(90.);
}

def carre(c:Double) {
  for (cpt <- 0 to 3) {
  	avance(c);
  	droite(90.);
  }
}
